<resources>
    <string name="app_name">to-do</string>
    <string name="title_today">Today</string>
    <string name="title_history">History</string>
    <string name="title_search">Search</string>
    <string name="today_hint">to-do…</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nothing">Nothing to do!</string>
    <string name="no_data_found">No Data Found</string>
    <string name="add_new_task">Add new Task</string>
    <string name="what_todo">What todo</string>
    <string name="save">Save</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="new_task_must_fill_all">Make sure to fill in the task and choose a priority!</string>
    <string name="about">About</string>
    <string name="me_string">Husam Awadhi</string>
    <string name="db_name">to-do-husam.db</string>
    <string name="delete_all">Delete All</string>
    <string name="priority">Priority</string>
    <string name="edit">Edit</string>
    <string name="update">Update</string>
    <string name="history">History</string>
    <string name="delete">Delete</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="confirmation">Are you sure?</string>
    <string name="since">Since</string>
</resources>
