<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/dimen_12">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/todo_task"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/wrap_constraints"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priority_chips"
        android:hint="@string/what_todo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/todo_task_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusedByDefault="true"
            android:inputType="textMultiLine"
            android:ems="10"
            android:gravity="start|top"
            android:lines="3"
            android:scrollbars="vertical"
            android:maxLines="5"
            android:layout_marginTop="8dp"
            android:textSize="@dimen/font_size_16"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSubmit"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/save"
        app:icon="@drawable/ic_save"
        app:iconPadding="4dp"
        app:iconGravity="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/todo_task" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/priority_chips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:checkedChip="@id/chip_low"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_high"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:clickable="true"
            app:checkedIcon="@null"
            android:focusable="true"
            app:chipBackgroundColor="@color/chips_state_list_high"
            app:checkedIconTint="@color/high"
            android:text="@string/high" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_medium"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:clickable="true"
            app:checkedIcon="@null"
            android:focusable="true"
            app:chipBackgroundColor="@color/chips_state_list_med"
            app:checkedIconTint="@color/medium"
            android:text="@string/medium" />


        <com.google.android.material.chip.Chip
            android:id="@+id/chip_low"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:clickable="true"
            app:checkedIcon="@null"
            android:focusable="true"
            app:checkedIconTint="@color/low"
            app:chipBackgroundColor="@color/chips_state_list_low"
            android:text="@string/low" />

    </com.google.android.material.chip.ChipGroup>

</androidx.constraintlayout.widget.ConstraintLayout>

